--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pandas
-numpy
-seaborn
-matplotlib
-scikit-learn
-catboost
-xgboost
-dill
-Flask
-gunicorn
+pandas==2.1.4
+numpy==1.26.4
+seaborn==0.13.2
+matplotlib==3.8.4
+scikit-learn==1.3.2
+catboost==1.2.7
+xgboost==2.0.3
+dill==0.3.8
+Flask==3.0.2
+gunicorn==21.2.0
+joblib==1.3.2
 #-e .
